--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -58,6 +58,7 @@
         android:text="@string/contact1"
         android:textSize="20sp"
         android:textStyle="italic"
+        android:autoLink="phone"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp" />
@@ -67,21 +68,35 @@
         android:layout_height="wrap_content"
         android:text="@string/contact2"
         android:textSize="20sp"
+        android:autoLink="email"
         android:textStyle="italic"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp" />
 
     <TextView
+        android:id="@+id/fb_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact3"
         android:textSize="20sp"
         android:textStyle="italic"
+        android:autoLink="all"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"/>
 
+                <TextView
+                    android:id="@+id/insta_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contact4"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:autoLink="all"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"/>
             </LinearLayout>
             </ScrollView>
         </android.support.v7.widget.CardView>
