--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,18 @@
         android:textColor="@android:color/white"/>
 
     </LinearLayout>
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:onClick="apply"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/button5"
+                android:background="@drawable/round_button"
+                android:textColor="@android:color/white"/>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
     </LinearLayout>
