--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".Contact">
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -17,24 +21,17 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="10dp"
-            android:padding="10dp">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/rsgic1"
-            android:contentDescription="@string/todo" />
-        </android.support.v7.widget.CardView>
+            android:layout_height="188dp"
+            android:contentDescription="@string/todo"
+            android:src="@drawable/newlogopng" />
+
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -62,7 +59,17 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp" />
-
+                <TextView
+                    android:id="@+id/site"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contact5"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    android:autoLink="all"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,8 +92,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"/>
-
-                <TextView
+         <TextView
                     android:id="@+id/insta_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -101,4 +107,5 @@
             </ScrollView>
         </android.support.v7.widget.CardView>
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
