--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -14,26 +14,8 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="10dp"
-            android:padding="10dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/rsgic1"
-                android:contentDescription="@string/todo" />
-        </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -52,18 +34,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/reg_courses"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="30sp"
+            android:layout_marginTop="20dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course1"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:text="@string/course2"
         android:layout_marginTop="10dp"/>
 
@@ -71,28 +59,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course3"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course4"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course5"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course6"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"/>
 
@@ -100,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course7"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"/>
 
@@ -108,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course8"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"/>
 
@@ -116,12 +104,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/course9"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/spcl_courses"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="30sp"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/spcl_courses1"
+            android:textSize="16sp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/spcl_courses2"
+            android:textSize="16sp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
-</LinearLayout>
 </LinearLayout>
