--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,21 +21,16 @@
         android:gravity="center"
         android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="6dp"
-        app:cardCornerRadius="10dp"
-        android:padding="10dp">
+
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/rsgic1"
+        android:layout_height="200dp"
+        android:gravity="center"
+        android:src="@drawable/newlogopng"
         android:contentDescription="@string/todo" />
 
-    </android.support.v7.widget.CardView>
+
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -111,8 +106,8 @@
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:onClick="apply"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/button5"
                 android:background="@drawable/round_button"
                 android:textColor="@android:color/white"/>
