--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -17,8 +17,8 @@
 
 
 
-    <ImageView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/rsgic" />
+        android:layout_height="match_parent" />
 </LinearLayout>
